--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  /* position: relative; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,17 +11,11 @@
   padding: 0;
 }
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0;
 }
 ::-webkit-scrollbar-track {
-  background: black;
+  background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background: black;
-  box-shadow: 0 0 50px cyan;
-
-  border-radius: 10px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: cyan;
+  background: transparent;
 }
